🚑 Fix bug on mobile when weekly image is less than 3

--- a/src/routes/Introduce.css
+++ b/src/routes/Introduce.css
@@ -201,7 +201,7 @@
     flex-direction: column;
 }
 
-.introduce-box .subject-box {
+.introduc-box .subject-box {
     position: relative;
 }
 
